Bug 1389167 - make bookmarks toolbar more visible in customize mode, r=abenson+572682,dao
MozReview-Commit-ID: 4fsbLmfmz9D

UltraBlame original commit: 490b9614bd853f508482586295d3bcf7e5c9dd18

--- a/browser/themes/shared/browser.inc.css
+++ b/browser/themes/shared/browser.inc.css
@@ -31,6 +31,16 @@
   transition: min-height 170ms ease-out, max-height 170ms ease-out, visibility 170ms linear;
 }
 
+#navigator-toolbox > toolbar[customizing]:not(#toolbar-menubar):not(#TabsToolbar):not(#nav-bar) {
+  outline: 1px dashed;
+  outline-offset: -4px;
+  -moz-outline-radius: 2px;
+  
+  min-height: 22px;
+  
+  padding-bottom: 0;
+}
+
 
 .urlbar-go-button {
   padding: 0 3px;
